# RetroGPT

./: .eslintrc  .gitignore  .pub.env  App.css  Cargo.toml  Dockerfile  README.md  build.sh  compose.yaml  conf.toml  diesel.toml  docker_rebuild.sh  eslint.config.js  impact.tsx  index.html  index.js  manual_deploy.sh  models.txt  nginx.conf  nginx.dev.conf  nginx.prod.conf  package-lock.json  package.json  serverconf.toml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build-test.yml  format.yml
backend/: Cargo.toml  cfg.rs  config.rs  gpt.rs  lib.rs  log.rs  logging.rs  main.rs
backend/db/: chats.rs  mod.rs  models.rs  msgs.rs  schema.rs  sessions.rs  users.rs
backend/server/: endpoint.rs  error.rs  mod.rs  predicate.rs
backend/server/endpoint/: api_chat_messages.rs  api_chats.rs  api_def_sess.rs  api_prompt.rs  auth.rs  mod.rs  serve_static.rs
crates/librgpt/: Cargo.toml
crates/librgpt/src/: cfg.rs  lib.rs  startup.rs
crates/librgpt/src/db/: dep_chats.rs  mod.rs  msgs.rs  schema.rs  sessions.rs  users.rs
crates/librgpt/src/server/: mod.rs  predicate.rs
crates/librgpt/src/server/endpoint/: api_chat_messages.rs  api_chats.rs  api_def_sess.rs  api_prompt.rs  auth.rs  mod.rs  serve_static.rs  session.rs
crates/libserver/: Cargo.toml
crates/libserver/src/: lib.rs
crates/rgpt/: Cargo.toml
crates/rgpt-api/: Cargo.toml
crates/rgpt-api/src/: main.rs
crates/rgpt-cfg/: Cargo.toml
crates/rgpt-cfg/src/: lib.rs  shared_state.rs
crates/rgpt-db/: Cargo.toml
crates/rgpt-db/src/: chat.rs  lib.rs  msg.rs  schema.rs  session.rs  user.rs
crates/rgpt-server/: Cargo.toml
crates/rgpt-server/src/: lib.rs  serve_static.rs
crates/rgpt-server/src/api/: auth.rs  chat_msgs.rs  chats.rs  default_session.rs  mod.rs  prompt.rs  user_session.rs
crates/rgpt-server/src/api/v0_0_1/: append_to_chat.rs  attach.rs  auth.rs  chat_msgs.rs  delete_chat.rs  mod.rs  prompt.rs  user_chats.rs
crates/rgpt-static/: Cargo.toml
crates/rgpt-static/src/: main.rs
crates/rgpt-stream/: Cargo.toml
crates/rgpt-stream/src/: lib.rs
crates/rgpt/src/: main.rs
frontend/: Api.ts  ApiUrlFormat.ts  App.css  App.tsx  BaseUrl.ts  ChatReference.css  ChatReference.tsx  Dockbar.css  Dockbar.tsx  FileExplorer.css  FileExplorer.tsx  LatexRenderer.tsx  MenuBar.css  MenuBar.tsx  MusicPlayer.css  MusicPlayer.jsx  MusicPlayer.tsx  OldApp.tsx  RightClickMenu.tsx  WindowLocation.tsx  auth.ts  cookie.ts  main.tsx  request.ts
frontend/components/: ChatDisplay.tsx  Display.tsx  InputBox.tsx  MainScreenInner.tsx  StaticJetBrainsMono.tsx  TypeWriter.tsx
frontend/src/: App.tsx  main.css  main.tsx
frontend/src/components/: ChatDisplay.tsx  InputBox.tsx  MainScreen.tsx  MainScreenInner.tsx
migrations/2025-01-22-155654_tmsgs/: down.sql  up.sql
migrations/2025-01-23-001837_create_users_table/: up.sql
migrations/2025-01-23-005204_create_sessions_table/: up.sql
migrations/2025-01-23-011445_create_msgs_table/: down.sql  up.sql
migrations/2025-01-23-013513_create_chats_table/: up.sql
migrations/2025-01-31-220415_add_chat_name/: down.sql  up.sql
migrations/2025-02-03-144543_optional_head_id/: down.sql  up.sql
migrations/2025-02-05-155756_optional_chat_name/: down.sql  up.sql
migrations/2025-03-31-142356_deleted-chat-marker/: down.sql  up.sql
oldstatic/: index.html
static/: bindex.html  not_found.html
