[workspace]
resolver = "2"
members = [
  "crates/librgpt",
  "crates/libserver",
  "crates/rgpt",
  "crates/rgpt-db",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
librgpt = { path = "crates/librgpt" }
libserver = { path = "crates/libserver" }
rgpt-db = { path = "crates/rgpt-db" }
