[workspace]
resolver = "3"
members = [
  "crates/librgpt",
  "crates/rgpt-api",
  "crates/rgpt-cfg",
  "crates/rgpt-db",
  "crates/rgpt-server",
  "crates/rgpt-static",
  "crates/rgpt-stream",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
librgpt = { path = "crates/librgpt" }
rgpt-db = { path = "crates/rgpt-db" }
rgpt-server = { path = "crates/rgpt-server" }
rgpt-cfg = { path = "crates/rgpt-cfg" }
rgpt-stream = { path = "crates/rgpt-stream" }

libserver = { git = "https://github.com/JackDyre/libserver", rev = "c7aa03a" }

async-openai = "0.28.0"
bytes = "1.10.0"
chrono = "0.4.39"
diesel = { version = "2.2.6", features = ["chrono", "postgres"] }
diesel-async = { version = "0.5.2", features = ["postgres"] }
futures = "0.3.31"
http-body-util = "0.1.2"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["full"] }
fastwebsockets = { version = "0.10.0", features = ["upgrade"] }
mime_guess = "2.0.5"
reqwest = { version = "0.12.11", features = ["json"] }
serde = "1.0.217"
serde_json = "1.0.134"
thiserror = "2.0.11"
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["codec"] }
tower = { version = "0.5.2", features = ["util"] }
uuid = { version = "1.12.1", features = ["v4"] }
urlencoding = "2.1.3"
