[package]
name = "librgpt"
version = "0.1.0"
edition = "2021"

[dependencies]
rgpt-db.workspace = true
libserver.workspace = true

async-openai = "0.27.2"
chrono = "0.4.39"
diesel = { version = "2.2.6", features = ["chrono", "postgres"] }
diesel-async = { version = "0.5.2", features = ["postgres"] }
futures = "0.3.31"
http-body-util = "0.1.2"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["full"] }
mime_guess = "2.0.5"
reqwest = { version = "0.12.11", features = ["json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["codec"] }
uuid = { version = "1.12.1", features = ["v4"] }
tower = "0.5.2"
