[package]
name = "rgpt-server"
version.workspace = true
edition.workspace = true

[dependencies]
libserver.workspace = true
rgpt-cfg.workspace = true
rgpt-db.workspace = true

mime_guess = "2.0.5"
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["codec"] }
futures = "0.3.31"
hyper = { version = "1", features = ["full"] }
tower = "0.5.2"
serde_json = "1.0.134"
