[package]
name = "rgpt-server"
version.workspace = true
edition.workspace = true

[dependencies]
libserver.workspace = true
rgpt-cfg.workspace = true
rgpt-db.workspace = true

async-openai.workspace = true

mime_guess.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
hyper.workspace = true
tower.workspace = true
serde_json.workspace = true
thiserror.workspace = true
http-body-util.workspace = true
diesel.workspace = true
serde.workspace = true
